# codex-switch

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: atomic.rs  main.rs  paths.rs  profile.rs  state.rs
